--- a/lab2/drive/templates/base.html
+++ b/lab2/drive/templates/base.html
@@ -6,7 +6,7 @@
 
 {% block navbar %}
     <nav class="navbar navbar-default">
-      TODO: Link to home
+      <a class="navbar-brand" href="#">Drive</a>
     </nav>
 {% endblock %}
 
