full funcitonality boto3 lab2

--- a/lab2/drive/templates/base.html
+++ b/lab2/drive/templates/base.html
@@ -6,7 +6,7 @@
 
 {% block navbar %}
     <nav class="navbar navbar-default">
-      <a class="navbar-brand" href="#">Drive</a>
+      <a class="navbar-brand" href={{ url_for('buckets_list', region_name="global") }}>Drive</a>
     </nav>
 {% endblock %}
 
