--- a/lab2/drive/templates/bucket.html
+++ b/lab2/drive/templates/bucket.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 	<h1>{% block title %}Bucket - {{ bucket_name }}{% endblock %}</h1>
-	<form id="file-upload" action={{ url_for('bucket', name=bucket_name) }} method="POST" enctype="multipart/form-data">
+	<form id="file-upload" action={{ url_for('upload_file', bucket_name=bucket_name) }} method="POST" enctype="multipart/form-data">
 		<button id="upload-btn" type="button" class="btn btn-primary btn-block">Upload New File <span class="glyphicon glyphicon-plus-sign"></span></button>
 		<div hidden>{{ form.file }}</div>
 		{{ form.filepath }}
