Added EC2 and Cloudwatch functionality

--- a/maestro/templates/create-bucket.html
+++ b/maestro/templates/create-bucket.html
@@ -17,7 +17,7 @@
 			<label for="region-name">Region</label>
 			<select class="form-control" name="region-name" id="region-name">
 				{% for region in regions %}
-		    		<option value={{ region.name }}>{{ region.name }}</option>
+		    		<option value={{ region }}>{{ region }}</option>
 		    	{% endfor %}
 			</select>
 		</div>
