--- a/maestro/templates/base.html
+++ b/maestro/templates/base.html
@@ -15,11 +15,10 @@
 
             <ul class="nav navbar-nav">
                 <li><a href={{ url_for('buckets_list') }}>Storage</a></li>
-                <li><a href="#">Compute</a></li>
+                <li><a href={{ url_for('nodes_list') }}>Compute</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-globe"></span> {{ get_current_region() }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
